[metadata]
name = disapi
version = 0.0.1
author = Filippo Romani
author_email = filipporomanionline@gmail.com
description = Basic Discord API module, built with Python. For docs see github (https://github.com/filipporomani/disapi).
url = https://github.com/filipporomani/disapi
project_urls =
    Bug Tracker = https://github.com/filipporomani/disapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6